src/style.css
body {
	font-family: Helvetica, Helvetica Neue, Arial, sans-serif; 
	background-image: url('img/ai-bg.jpg');	
	background-repeat: repeat-y;
	background-size: 100%;
}
@media (max-width: 575px) {
	body.p-4 {
		padding: 0.7rem !important;
	}
}
.curve {
	border-top-right-radius: 100px;
	border-bottom-left-radius: 100px;
}
@media (max-width: 991px) {
	.curve {
		border-top-right-radius: 50px;
		border-bottom-left-radius: 50px;
	}
}
a {
	color: #000000;
	text-decoration: none;
	transition: opacity 0.2s ease;
}
a:hover {
	opacity: 0.7;
}
h1,
.h1 {
	font-size: 4.375rem;
	font-weight: bold;
	letter-spacing: -1px;
	line-height: 1.1;
}
@media (min-width: 768px) and (max-width: 991px)  {
	h1,
	.h1 {
		font-size: 2.8rem;
	}
}
@media (min-width: 768px) and (max-height: 730px) {
	h1 {
		font-size: 3.8rem;
		padding-top: 0 !important;
	}
}
@media (max-width: 767px) {
	h1,
	.h1 {
		font-size: 2.08rem;
	}
}
h2,
.h2 {
	font-size: 1.625rem;
	font-weight: bold;
	letter-spacing: -0.2px;
	line-height: 1.26;
}
@media (max-width: 991px) {
	h2,
	.h2 {
		font-size: 1.6rem;
	}
}
h3,
.h3 {
	font-size: 1.556rem;
	font-weight: bold;
	line-height: 1.2;
	letter-spacing: -0.5px;
}
@media (max-width: 991px) {
	h3,
	.h3 {
		font-size: 1.5rem;
	}
}
h4,
.h4 {
	font-size: 1.1rem;
	font-weight: bold;
}
h5,
.h5 {
	font-size: 0.938rem;
	font-weight: bold;
}
h6,
.h6 {
	font-family: Helvetica, Helvetica Neue, Arial, sans-serif; 
	font-weight: bold;
	font-size: 1rem;
	line-height: 1.2;
	text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.32);
}
.display-2 {
	font-size: 2.25rem;
	font-weight: bold;
	line-height: 1.3;
}
@media (max-width: 991px) {
	.display-2 {
		font-size: 1.8rem;
	}
}
.display-3 {
	font-size: 1.4375rem;
	font-weight: normal;
	letter-spacing: 1px;
	line-height: 1.43;
}
@media (max-width: 991px) {
	.display-3 {
		font-size: 1.2rem;
	}
}
.display-5 {
	font-size: 2rem;
	line-height: 1.3;
}
@media (max-width: 991px) {
	.display-5 {
		font-size: 1.1rem;
	}
}
@media (min-width: 992px) and (max-height: 730px) {
	.display-5 {
		font-size: 1.6rem;
	}
}
.display-6 {
	font-size: 0.875rem;
	font-weight: normal;
	line-height: 1.23;
	letter-spacing: 0.2px;
}
cite,
.source {
	font-size: 0.812rem;
}
.not-by-ai-folder {
	filter: drop-shadow(0px 0px 12px rgba(0, 0, 0, 0.3));
}
@supports (-webkit-touch-callout: none) {
	.not-by-ai-folder {
		filter: none;
	}
}
.not-by-ai-folder-wrapper:hover{
	background: #EDEDED;
	box-shadow: inset 0 0 0px 4px #F9F9F9;
}
.bg-black .not-by-ai-folder-wrapper:hover{
	background: #212529;
	box-shadow: inset 0 0 0px 4px #444444;
}
@media (min-width: 992px) {
	.not-by-ai-folder-wrapper:hover + .download-link-wrapper .download-link {
		background: #EDEDED;
		box-shadow: inset 0 0 0px 4px #F9F9F9;
	}
	.bg-black .not-by-ai-folder-wrapper:hover + .download-link-wrapper .download-link {
		background: #212529;
		box-shadow: inset 0 0 0px 4px #444444;
	}
}
.bg-dark {
	background-color: #292929 !important;
}
[class*="border-"] {
	border-color: #EAEAEA !important;
}
.rounded {
	border-radius: 12px !important;
}
.btn {
	color: #FFFFFF;
	width: auto;
	background-color: #000000;
	padding: 0.6rem 2.8rem;
	border: 0;
	border-radius: 0;
}
.btn-white {
	color: #000000;
	width: auto;
	background-color: #FFFFFF;
	padding: 0.6rem 2.8rem;
	border: 0;
	border-radius: 0;
}
.btn:hover,
.btn:focus,
.btn:active,
.btn:first-child:active,
:not(.btn-check)+.btn:active {
	color: #FFFFFF;
	background-color: #333333;
}
.btn-white:hover,
.btn-white:focus,
.btn-white:active,
.btn-white:first-child:active,
:not(.btn-check)+.btn-white:active {
	color: #000000;
	background-color: #EDEDED;
}
nav {
	font-size: 0.875rem;
}
@media (min-width: 992px) {
	.download-popup {
		background-image: url('img/not-bi-ai-badge-download-examples.svg'); 
		background-position: bottom right; 
		background-repeat: no-repeat;
	}
}
@media (max-width: 991px) {
	.download-popup {
		background-image: url('img/not-bi-ai-badge-download-examples.svg'); 
		background-position: bottom right; 
		background-repeat: no-repeat;
		background-size: 50%;
	}
}
@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
.logo-feature-request-bar {
	opacity: 0;
	animation: fadeIn 0.5s ease-in 6s forwards;
}
#slide-left,
#slide-right {
	transition: opacity 0.9s ease-in-out;
}
img[class*="share__"]:hover {
	opacity: 1 !important;
}
.cursor-pointer {
	cursor: pointer;
}
.fade-in-move-up {
	animation: fadeInMoveUp 0.7s ease-out forwards;
}
#artist-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.6s;
}
#writer-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.7s;	
}
#producer-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.8s;
}
@keyframes fadeInMoveUp {
  0% { opacity: 0; transform: translateY(10px); }
  50% { opacity: 1; transform: translateY(0px); }
  70% { opacity: 1; transform: translateY(5px); }
  100% { opacity: 1; transform: translateY(0px); }
}
@media (max-width: 325px) {
	.not-by-ai-badge-folder img:last-child {
	  display: none !important;
	}
}
.sliding-background {
  background: url("img/not-by-ai-rotate.svg") repeat-x;
  height: 42px;
  width: 4881px;
  animation: loopX 80s linear infinite;
}
@keyframes loopX {
  0% {
    transform: translate3d(0, 0, 0);
  }
  100% {
    transform: translate3d(-1627px, 0, 0);
  }
}
form label {
	font-size: 0.82rem;
	margin-top: 0.75rem;
}
.modal form label {
	margin-top: 0;
}
form input,
form textarea {
	background-color: #efefef;
	padding: 0.5rem;
	width: 100%;
	border: 0;
	border-radius: 0;
	outline: 0;
	transition: 0.2s ease all;
}
form input:focus,
form input:focus-visible {
	background-color: #f4f4f4;
}
form input[type=checkbox],
form input[type=radio] {
	width: auto;
	margin-right: 0.45rem;
}
form input[type=checkbox] {
	background-color: #FFFFFF;
	appearance: none;
	width: 1.3rem;
	height: 1.3rem;
	border: 1px solid #dee2e6;
	border-radius: 0.15em;
	display: grid;
  place-content: center;
  margin-bottom: 0.4rem;
}
@media not all and (-webkit-min-device-pixel-ratio:0) {
 	form input[type=checkbox] {
 		appearance: auto;
 	}
 }
form input[type="checkbox"]::before {
  content: "";
  width: 0.65em;
  height: 0.65em;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
  transform: scale(0);
  transform-origin: bottom left;
  transition: transform 0.3s cubic-bezier(0.175, 0.880, 0.31, 1.27);
  /* Windows High Contrast Mode */
  background-color: #000000;
}
form input[type="checkbox"]:checked::before {
  transform: scale(1);
}
form input[type="checkbox"]:focus {
  outline: max(2px, 0.15em) solid #dee2e6;;
  outline-offset: max(2px, 0.15em);
}
form button {
	color: #FFFFFF;
	background-color: #212529;
	padding: 1rem 1.8rem;
	border: 0;
}
form ul {
	padding-left: 0;
}
form li {
	list-style-type: none;
}
form li label {
	margin-top: 0;
}
form .form-check-input:checked {
	background-color: #000000;
	border-color: #000000;
}
.hamburger-menu {
  width: 20px;
  height: 14.5px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
}
.bar {
  width: 100%;
  height: 2.5px;
  background-color: #000;
}
#curtain {
	visibility: hidden;
	background-color: rgba(255, 255, 255, 0.5);
  transition: ease-in all 0.2s;
  backdrop-filter: blur(0px);
}
#curtain.show {
	visibility: visible;
	backdrop-filter: blur(12px);
}
.sidenav {
  height: 100%;
  width: 0; 
  position: fixed;
  z-index: 1; 
  top: 0;
  left: 0;
  background-color: #FFFFFF;
  overflow-x: hidden;
  padding-top: 60px;
  transition: cubic-bezier(.55,1,.76,1) 0.35s;
}
.sidenav a {
  padding: 0.5rem 2rem;
  text-decoration: none;
  font-size: 1.1rem;
  color: #000000;
  display: block;
  opacity: 0;
}
.sidenav.show a {
	animation: fadeIn 0.9s ease forwards;
}
.sidenav.show a:nth-child(2) {
  animation-delay: 0s;
}
.sidenav.show a:nth-child(3) {
  animation-delay: 0.04s;
}
.sidenav.show a:nth-child(4) {
  animation-delay: 0.08s;
}
.sidenav.show a:nth-child(5) {
  animation-delay: 0.12s;
}
.sidenav.show a:nth-child(6) {
  animation-delay: 0.16s;
}
.sidenav.show a:nth-child(7) {
  animation-delay: 0.20s;
}
.sidenav.show a:nth-child(8) {
  animation-delay: 0.25s;
}
.sidenav.show a:nth-child(9) {
  animation-delay: 0.30s;
}
.sidenav.show a:nth-child(10) {
  animation-delay: 0.37s;
}
.sidenav.show div a {
	animation-delay: 0.45s !important;
}
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}
#real-meaning-of-not-by-ai {
	background-image: url('img/not-by-ai-grid-bg.svg');
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
	min-height: 100vh;
}
#big-not-by-ai-benefits {
	background-image: url('img/typing-without-ai-bg.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
}
@media /* only for retina displays */
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (min--moz-device-pixel-ratio: 2),
only screen and (min-device-pixel-ratio: 2),
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (min-resolution: 192dpi),
only screen and (min-resolution: 2dppx) {
  #big-not-by-ai-benefits {
    background-image: url('img/typing-without-ai-bg@2x.jpg');
  }
}
.accordion-item {
	border-radius: 0 !important;
}
.accordion-item .accordion-button {
	background-color: #000000 !important;
	color: #FFFFFF;
}
.accordion-button:not(.collapsed),
.accordion-item {
	background-color: #292929 !important;
	color: #FFFFFF;
}
.accordion-body {
	text-align: left;
}
.accordion-button:focus {
	border-color: #FFFFFF;
	box-shadow: none;
}
.for-business-link,
.sidenav a.for-business-link {
	border: #505050 1px solid;
  padding: 0.2rem 0.7rem;
  display: inline-block;
  font-size: 0.8rem;
}
.business-profile__label {
	font-weight: 300;
	font-size: 0.8125rem;
}
.business-profile__field {
	font-size: 1.125rem;
}
.nav-underline .nav-link.active, 
.nav-underline .show>.nav-link {
	border-bottom-width: 1px;
	border-bottom-color: #000000;
	opacity: 1;
}
.nav-underline .nav-link.active:focus, 
.nav-underline .nav-link.active:hover, 
.nav-underline .show>.nav-link:focus,
.nav-underline .show>.nav-link:hover {
	border-bottom-color: #000000;
}
.nav-underline .nav-link {
	transform: translateY(2px);
}
.nav-underline .nav-link:focus, 
.nav-underline .nav-link:hover {
	border-bottom-color: transparent;
	color: #000000;
	opacity: 1;
}
.nav-underline .nav-link {
	color: #000000;
	opacity: 0.7;
}

